--- a/demo/demo.htm
+++ b/demo/demo.htm
@@ -46,7 +46,10 @@
 <h2>Live translation</h2>
 
 <p>Input:</p>
-<textarea id="input" style="width: 400px; height: 150px" onkeyup="go()" onchange="go()">foo :heart: bar :cinema: baz</textarea>
+<textarea id="input" style="width: 400px; height: 150px" onkeyup="go()" onchange="go()">
+:cop::skin-tone-5:
+foo :heart: bar :cinema: baz
+</textarea>
 
 <p>Styled output:</p>
 <div id="out3" style="width: 400px; min-height: 150px; background-color: #eee; padding: 4px;"></div>
@@ -69,9 +72,13 @@
 <script src="../lib/jquery.emoji.js" type="text/javascript"></script>
 <script>
 
-emoji.img_path = '/emoji-data/img-apple-64/';
-emoji.sheet_path = '/emoji-data/sheet_64.png';
 emoji.use_sheet = true;
+emoji.img_sets = {
+	'apple': {
+		'path': '../build/emoji-data/img-apple-64/',
+		'sheet': '../build/emoji-data/sheet_apple_64.png'
+	}
+};
 
 emoji.init_env();
 var auto_mode = emoji.replace_mode;
@@ -106,7 +113,7 @@ function go2(){
 	if (mode == 'css'){
 		emoji.replace_mode = 'img';
 		emoji.supports_css = true;
-		
+
 	}else if (mode == 'img'){
 		emoji.replace_mode = 'img';
 		emoji.supports_css = false;
@@ -124,7 +131,7 @@ function go3(){
 	emoji.replace_mode = auto_mode;
 	emoji.text_mode = false;
 
-	$("#jout1").emoji();	
+	$("#jout1").emoji();
 }
 
 function go4(){
